# Orx_studentmanager

./: README.md  build_app.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
components/: tables.py
pages/: barcode_page.py  group_page.py  send_mails_page.py  student_page.py
utils/: activation_messages.py  add_code.py  clear_barcode_path.py  connection_manager.py  database.py  date_manager.py  date_utils.py  helpers.py  telegram_bot.py  whatsapp_manager.py
