[build-system]
requires = ["setuptools>=65.0.0", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"

[project]
name = "student_manager"
version = "1.0.0"
description = "برنامج لإدارة الطلاب مبني بـ Flet مع دعم الباركود والإشعارات"
authors = [
    { name = "Salah Abdeldaim", email = "salahabdeldaim609@email.com" }
]
dependencies = [
    "flet>=0.24.1",
    "python-telegram-bot>=20.6",
    "pywhatkit>=5.4",
    "qrcode>=7.4.2",
    "pillow>=10.0.0",
    "asyncio>=3.4.3",
    "aiohttp>=3.8.5",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
keywords = ["education", "student-management", "flet", "barcode", "notifications"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Desktop",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Education",
    "Topic :: Office/Business",
    "Natural Language :: Arabic",
]

[tool.flet]
name = "StudentManager"
description = "برنامج لإدارة الطلاب"
version = "1.0.0"
entrypoint = "main.py"
assets-dir = "assets"
icon = "assets/icon.ico"
bundle-id = "com.salah.studentmanager"
platforms = ["windows"]
module-name = "student_manager"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=student_manager"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.venv
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true


[project.scripts]
student-manager = "student_manager.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[tool.setuptools]
packages = ["student_manager"]
